puree-tests/src/test/resources/effects/neg/UnusedNone.scala
object UnusedNone {
  def f(): Int = {
    None
    1
  }
}
